# migratable-aws-stacker

./: Makefile  README.md  pyproject.toml  readme.rst  setup.py  stacker.yaml
blueprints/: bastion.py
conf/: dev.env  prod.env
tests/blueprints/: test_bastion.py
tests/fixtures/blueprints/: test_bastion.json
